--- a/Website-UX-2022/index.html
+++ b/Website-UX-2022/index.html
@@ -12,14 +12,21 @@
 </head>
 
 <body>
+
+    <div class="logoCover"> <img class="logo" src="images/cropped-personal-logo.jpg" />
+        <p>Placeholder for Navigation bar</p>
+    </div>
+
     <section class="hidden">
         <h1>Steven Barkley</h1>
         <article>I'm a user experience engineer who facilitates delivery of a savvy, impactful and just vision
             for tomorrow.</article>
+        <iframe src='https://my.spline.design/3dglasscubesforuxportfolio9420229102022-1c574afbd6c61008c41807e517c11b8a/'
+            frameborder='0' width='100%' height='100%'></iframe>
         <ul>
-            <li><a href="">#jumpToSection</a></li>
-            <li><a href="">#jumpToSection</a></li>
-            <li><a href="">#jumpToSection</a></li>
+            <li><a href="">#menuqu.com</a></li>
+            <li><a href="">#grammarhub.org</a></li>
+            <li><a href="">#wiltonmanors.info</a></li>
         </ul>
     </section class="hidden">
 
