--- a/Website-UX-2022/index.html
+++ b/Website-UX-2022/index.html
@@ -22,8 +22,9 @@
         <iframe src='https://my.spline.design/3dglasscubesforuxportfolio9420229102022-1c574afbd6c61008c41807e517c11b8a/'
             frameborder='0' width='100%' height='100%'></iframe>
         <div>
-            <h1>Steven Barkley</h1>
-            <article>I'm a user experience engineer who facilitates delivery of a savvy, impactful and just vision
+            <h1>🖐️ Hello, I'm Steven Barkley.</h1>
+            <article>I'm a user experience engineer who facilitates a savvy, impactful,
+                and just vision
                 for tomorrow.</article>
             <ul>
                 <li><a href="">#menuqu.com</a></li>
@@ -33,15 +34,17 @@
         </div>
     </div>
     <section class="hidden">
-        <p>Placeholder for google slide </p>
-    </section>
+        <h3>Menuqu App</h3>
+        <h5>UX/UI Design for Menuqu Dining Visualization Mobile App</h5>
 
-    <section class="hidden">
-        <p>Placeholder for google slide </p>
     </section>
-
     <section class="hidden">
-        <p>Placeholder for google slide </p>
+        <h3>Grammarhub Website & App</h3>
+        <h5>UX Research + Responsive Web for Grammarhub Website</h5>
+    </section>
+    <section class="hidden">
+        <h3>Wilton Manors Website & App</h3>
+        <h5>UX Accessibility Challenge for Social Good</h5>
     </section>
 
     <section class="hidden">
