Got a start need to complete UX Portfolio challenges

--- a/Website-UX-2022/index.html
+++ b/Website-UX-2022/index.html
@@ -12,43 +12,52 @@
 </head>
 
 <body>
-
     <div class="logoCover">
-        <!--<img class="logo" src="images/personal-logo.png" />-->
-        <p>Placeholder for Navigation bar</p>
+
     </div>
 
     <div class="component">
         <iframe src='https://my.spline.design/3dglasscubesforuxportfolio9420229102022-1c574afbd6c61008c41807e517c11b8a/'
             frameborder='0' width='100%' height='100%'></iframe>
         <div>
+            <img class="logo" src="images/personal-logo.png" />
+
+        </div>
+        <div>
             <h1>🖐️ Hello, I'm Steven Barkley.</h1>
             <article>I'm a user experience engineer who facilitates a savvy, impactful,
                 and just vision
                 for tomorrow.</article>
             <ul>
-                <li><a href="">#menuqu.com</a></li>
-                <li><a href="">#grammarhub.org</a></li>
-                <li><a href="">#wiltonmanors.info</a></li>
+                <li><a class='button' id="orange" href='#Menuqu'>Case Study #1</a></li>
+                <li><a class='button' id="blueglass" href="#Grammarhub">Case Study #2</a></li>
+                <li><a class='button' id="green" href="#WiltonManors">Case Study #3</a></li>
             </ul>
         </div>
     </div>
     <section class="hidden">
         <h3>Menuqu App</h3>
         <h5>UX/UI Design for Menuqu Dining Visualization Mobile App</h5>
-
+        <img id='Menuqu' src='images/Menuqu.png' alt="Menuqu Iphone Mockup" />
     </section>
     <section class="hidden">
         <h3>Grammarhub Website & App</h3>
         <h5>UX Research + Responsive Web for Grammarhub Website</h5>
+        <img id='Grammarhub' src='images/Grammarhub.png' alt="Grammarhub Responsive Website design Mockup" />
     </section>
     <section class="hidden">
         <h3>Wilton Manors Website & App</h3>
         <h5>UX Accessibility Challenge for Social Good</h5>
+        <img id='WiltonManors' src='images/WiltonManors.png' alt="Wilton Manors city Website Mockup" />
     </section>
 
     <section class="hidden">
-        <p>Or you can decide to be content in your cage. Nothing wrong with a domesticated animal.</p>
+        <h3>Developer portfolio @ <a href="codepen.io/stevenbarkley">Codepen.io</a></h3>
+        <h5>Web Development and UX design project portfolio</h5>
+    </section>
+
+    <section clas="footer">
+        <p>©Steven Barkley All Rights Reserved</p>
     </section>
 </body>
 
