Got a great website

--- a/Website-UX-2022/index.html
+++ b/Website-UX-2022/index.html
@@ -20,7 +20,6 @@
         <iframe src='https://my.spline.design/3dglasscubesforuxportfolio9420229102022-1c574afbd6c61008c41807e517c11b8a/'
             frameborder='0' width='100%' height='100%'></iframe>
         <div>
-            <img class="logo" src="images/personal-logo.png" />
 
         </div>
         <div>
@@ -34,6 +33,24 @@
                 <li><a class='button' id="green" href="#WiltonManors">Case Study #3</a></li>
             </ul>
         </div>
+
+        <div class="flip-card gallery">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src="images/Selfie of Steven Barkley.JPG" alt="Avatar" style="width:400px">
+                </div>
+                <div class="flip-card-back">
+                    <!--<div class="caption">
+                        <p>When it comes to solutions I am last to none, I build with a story in mind transparent and
+                            fun! I listen learn so I deliver first in class, I see the user like they are made of glass.
+                        </p>
+                    </div>-->
+                    <img class="logo" src="images/personal-logo.png" />
+                </div>
+            </div>
+        </div>
+
+
     </div>
     <section class="hidden">
         <h3>Menuqu App</h3>
@@ -55,8 +72,36 @@
         <h3>Developer portfolio @ <a href="codepen.io/stevenbarkley">Codepen.io</a></h3>
         <h5>Web Development and UX design project portfolio</h5>
     </section>
+    <section>
+        <iframe
+            src="https://docs.google.com/presentation/d/e/2PACX-1vT3vOIxS8rGYTMaODyD2I1aQRosmkkCvTx_dWfcrCQpvd_dY5551gudUAJ-o2ZmQg/embed?start=false&loop=false&delayms=3000"
+            frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true"
+            webkitallowfullscreen="true"></iframe>
+    </section>
+    <section>
+        <iframe
+            src="https://docs.google.com/presentation/d/e/2PACX-1vRtOxwmj3Cr3V03O7p81_pOZ2MHMBLrsTPQhOndRkZtOw5caU_OqoZPaLu_2q6h4g/embed?start=false&loop=false&delayms=3000"
+            frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true"
+            webkitallowfullscreen="true"></iframe>
+    </section>
+    <section>
+        <iframe
+            src="https://docs.google.com/presentation/d/e/2PACX-1vSkzGVfmBAS12zuqOzO8kqyvDdtP8aHownBTTiKe5pE1lLXQYznb-Sp_tszd73vKXI5cae-Y5_6EYVN/embed?start=false&loop=false&delayms=3000"
+            frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true"
+            webkitallowfullscreen="true"></iframe>
+    </section>
+
+    <section class="resume">
+        <iframe
+            src="https://docs.google.com/document/d/e/2PACX-1vRV2iPQW_oLHzYdRx80Zy1WISJ54W6586T63kYldfu6qb3CE32WRwfZf92_OrbhugRbydM3o8C96FoI/pub?embedded=true"
+            width="850px" height="1000px"></iframe>
+    </section>
+
+
 
     <section clas="footer">
+        <p id="contact">+1-561-669-1428</p>
+        <p>steven.barkley2020@gmail.com</p>
         <p>©Steven Barkley All Rights Reserved</p>
     </section>
 </body>
