Added finished website I love my websitegit add .!

--- a/Website-UX-2022/index.html
+++ b/Website-UX-2022/index.html
@@ -28,7 +28,7 @@
                 and just vision
                 for tomorrow.</article>
             <ul>
-                <li><a class='button' id="orange" href='#Menuqu'>Case Study #1</a></li>
+                <li><a class='button' id="orange" href="#Menuqu">Case Study #1</a></li>
                 <li><a class='button' id="blueglass" href="#Grammarhub">Case Study #2</a></li>
                 <li><a class='button' id="green" href="#WiltonManors">Case Study #3</a></li>
             </ul>
