--- a/Scrimba-Learn-Javascript-for-free/project-3/index.html
+++ b/Scrimba-Learn-Javascript-for-free/project-3/index.html
@@ -1,16 +1,28 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="container">
-            <div>
-                <h3>HOME</h3>
-            </div>
-            <div>
-                <h3>GUEST</h3>
-            </div>
+
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div class="container">
+        <div>
+            <h3>HOME</h3>
+            <p id="homeScore"></p>
+            <button id="b1" onclick="onePoint()">+1</button>
+            <button id="b2" onclick="twoPoints()">+2</button>
+            <button id="b3" onclick="threePoints()">+3</button>
         </div>
-        <script src="index.js"></script>
-    </body>
+        <div>
+            <h3>GUEST</h3>
+            <p id="awayScore"></p>
+            <button id="b4" onclick="awayOnePoint()">+1</button>
+            <button id="b5" onclick="awayTwoPoints()">+2</button>
+            <button id="b6" onclick="awayThreePoints()">+3</button>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+
 </html>
