--- a/Scrimba-Learn-Javascript-for-free/project-4/index.html
+++ b/Scrimba-Learn-Javascript-for-free/project-4/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-    <h1>Blackjack</h1>
+    <div id="display">
+        <h1>Blackjack</h1>
+        <p id="message-el"> Want to play a round?</p>
+        <p>Cards:</p>
+        <p>Sum:</p>
+        <!-- 1. Create a button that says START GAME. 
+                    Make it call a startGame() function when clicked -->
+        <button id="btnStart" onclick="startGame()">START GAME</button>
+    </div>
     <script src="index.js"></script>
 </body>
 
