Add the new card button and totaled the new card

--- a/Scrimba-Learn-Javascript-for-free/project-4/index.html
+++ b/Scrimba-Learn-Javascript-for-free/project-4/index.html
@@ -17,6 +17,8 @@
 
         <p id="sum-el">Sum:</p>
         <button id="btnStart" onclick="startGame()">START GAME</button>
+        <button id="btnNew" onclick="newCard()">NEW CARD</button>
+
     </div>
     <script src="index.js"></script>
 </body>
